add the social functional
